[Add]エラーメッセージとフラッシュメッセージを追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -19,3 +19,20 @@
           waiting_for_production: "製作待ち"
           in_production: "製作中"
           production_completed: "製作完了"
+
+    activerecord:
+      attributes:
+        customer:
+          last_name: 名前(姓)
+          first_name: 名前(名)
+          last_name_kana: フリガナ(姓)
+          first_name_kana: フリガナ(名)
+          post_code: 郵便番号
+          address: 住所
+          tel: 電話番号
+          email: メールアドレス
+
+        delivery_address:
+          post_code: 郵便番号
+          address: 住所
+          name: 宛名
